--- a/cart.html
+++ b/cart.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <header>
-    <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo"></a>
+    <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
     <nav>
         <ul>
             <li><a href="#">Products</a></li>
             <li><a href="#">About Us</a></li>
         </ul>
     </nav>
+    <div class="header-icons">
         <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
         <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
+    </div>
 </header>
 <body>
     <div id="cart-items">
@@ -40,5 +42,10 @@
 </body>
 <footer>
     <a href="index.html"><img src="assets/footer-logo-desktop.png" alt="Footer Logo"></a>
+    <ul>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+    </ul>
 </footer>
 </html>
