--- a/index.html
+++ b/index.html
@@ -11,34 +11,53 @@
 </head>
 <body>
 <header>
-    <img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo">
+    <img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo">
     <nav>
         <ul>
             <li><a href="#">Products</a></li>
             <li><a href="#">About Us</a></li>
         </ul>
     </nav>
+    <div class="header-icons">
         <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
         <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
+    </div>
 </header>
 <main>
-    <section class="carousel">
-        <div>
-          <img src="assets/carousel-image-1.jpg" alt="Carousel Image 1">
-          <p>Elevate Your Hair Game</p>
-          <a href="product.html"><button class="shop-now">Shop Now</button></a>
+    <section aria-label="carousel of the latest products" class="carousel">
+        <div class="carousel-container">
+            <div class="carousel-slide">
+                <img src="assets/carousel-image-1.jpg" alt="Carousel Image 1">
+                <div class="carousel-content">
+                    <p>Elevate Your Hair Game</p>
+                    <a href="product.html"><button class="shop-now">Shop Now</button></a>
+                </div>
+            </div>
+            <div class="carousel-slide">
+                <img src="assets/carousel-image-2.jpg" alt="Carousel Image 2">
+                <div class="carousel-content">
+                    <p>New Arrivals</p>
+                    <a href="product.html"><button class="shop-now">Shop Now</button></a>
+                </div>
+            </div>
+            <div class="carousel-slide">
+                <img src="assets/carousel-image-3.jpg" alt="Carousel Image 3">
+                <div class="carousel-content">
+                    <p>Latest In Tech</p>
+                    <a href="product.html"><button class="shop-now">Shop Now</button></a>
+                </div>
+            </div>
         </div>
-        <div>
-          <img src="assets/carousel-image-2.jpg" alt="Carousel Image 2">
-          <p>New Arrivals</p>
-          <i class="fa-solid fa-arrow-left"></i>
-          <i class="fa-solid fa-arrow-right"></i>
-          <a href="product.html"><button class="shop-now">Shop Now</button></a>
-        </div>
-        <div>
-          <img src="assets/carousel-image-3.jpg" alt="Carousel Image 3">
-          <p>Latest In Tech</p>
-          <a href="product.html"><button class="shop-now">Shop Now</button></a>
+        
+        <!-- Navigation buttons -->
+        <button class="carousel-nav prev" aria-label="Previous slide"></button>
+        <button class="carousel-nav next" aria-label="Next slide"></button>
+        
+        <!-- Indicators -->
+        <div class="carousel-indicators">
+            <div class="carousel-indicator active" data-slide="0"></div>
+            <div class="carousel-indicator" data-slide="1"></div>
+            <div class="carousel-indicator" data-slide="2"></div>
         </div>
     </section>
     <section class="featured-products">
@@ -67,6 +86,12 @@
     </section>
 <footer>
     <a href="index.html"><img src="assets/footer-logo-desktop.png" alt="HotViewLabs Footer Logo"></a>
+    <ul>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+    </ul>
 </footer>
+<script src="js/main.js"></script>
 </body>
 </html>
