Add carousel function and fetch api
Added a bit of styling for carousel and functions for both carousel and fetching API

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    
+    <script src="js/main.js" defer></script>
 </head>
 <body>
 <header>
@@ -29,21 +31,21 @@
             <div class="carousel-slide">
                 <img src="assets/carousel-image-1.jpg" alt="Carousel Image 1">
                 <div class="carousel-content">
-                    <p>Elevate Your Hair Game</p>
+                    <p class="carousel-image_text-1">Elevate Your Hair Game</p>
                     <a href="product.html"><button class="shop-now">Shop Now</button></a>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="assets/carousel-image-2.jpg" alt="Carousel Image 2">
                 <div class="carousel-content">
-                    <p>New Arrivals</p>
+                    <p class="carousel-image_text-2">New Arrivals</p>
                     <a href="product.html"><button class="shop-now">Shop Now</button></a>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="assets/carousel-image-3.jpg" alt="Carousel Image 3">
                 <div class="carousel-content">
-                    <p>Latest In Tech</p>
+                    <p class="carousel-image_text-3">Latest In Tech</p>
                     <a href="product.html"><button class="shop-now">Shop Now</button></a>
                 </div>
             </div>
@@ -92,6 +94,5 @@
         <li><a href="#">Privacy Policy</a></li>
     </ul>
 </footer>
-<script src="js/main.js"></script>
 </body>
 </html>
