Added styling to carousel and link to product feed page

--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <header>
-    <img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo">
+    <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
     <nav>
         <ul>
             <li><a href="#">Products</a></li>
