--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="stylesheet" href="css/style.css">    
     <script src="js/main.js" defer></script>
 </head>
 <body>
 <header>
-    <img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo">
+    <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs company logo" class="header-logo"></a>
     <nav>
         <ul>
             <li><a href="#">Products</a></li>
