Re did carousel functions and restyled
Re formatted and the carousel function to have an infinite loop.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
         
         <!-- Navigation buttons -->
-        <button class="carousel-nav prev" aria-label="Previous slide"></button>
-        <button class="carousel-nav next" aria-label="Next slide"></button>
+        <button class="carousel-nav__prev" aria-label="Previous slide"></button>
+        <button class="carousel-nav__next" aria-label="Next slide"></button>
         
         <!-- Indicators -->
         <div class="carousel-indicators">
@@ -67,20 +67,20 @@
             <div class="product-card" a href="product.html">
                 <img src="assets/12-toy-car.jpg" alt="Toy Car">
                 <h3>Product Name</h3>
-                <p>rating: 4.5 star </p>
+                <p class="product-card_rating">rating: 4.5 star </p>
                 <p>$00.00</p>
             </a>
             </div>
             <div class="product-card" a href="product.html">
-                <img src="#" alt="Product image">
+                <img src="assets/14-bluetooth-speaker.jpg" alt="Bluetooth Speaker">
                 <h3>Product Name</h3>
-                <p>rating: 4.5 star </p>
+                <p class="product-card_rating">rating: 4.5 star </p>
                 <p>$00.00</p>
             </div>
             <div class="product-card">
-                <img src="#" alt="Product image">
+                <img src="assets/22-boots-black.jpg" alt="Product image">
                 <h3>Product Name</h3>
-                <p>rating: 4.5 star </p>
+                <p class="product-card_rating">rating: 4.5 star </p>
                 <p>$00.00</p>
             </div> 
         </div>
