Added styles to product-card
Added a bit of styling for the grid product on the product feed page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img src="assets/12-toy-car.jpg" alt="Toy Car">
                 <h3>Product Name</h3>
                 <p class="product-card_rating">4.5 star</p>
-                <p>$00.00</p>
+                <p class="product-card_price">$00.00</p>
             </a>
         </div>
     </section>
