Added div classes and styling to product-card

--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
         <h1>Featured Products</h1>
         <div class="product-grid">
             <a href="product.html?id=1" class="product-card">
-                <img src="assets/12-toy-car.jpg" alt="Toy Car">
-                <h3>Product Name</h3>
-                <p class="product-card_rating">4.5 star</p>
-                <p class="product-card_price">$00.00</p>
+                <div class="product-info">
+                    <img src="assets/12-toy-car.jpg" alt="Toy Car">
+                    <div class="product-header">
+                        <h3>Product Name</h3>
+                        <p class="product-card_rating">4.5 star</p>
+                    </div>
+                    <p class="product-card_price">$00.00</p>
+                </div>
             </a>
         </div>
     </section>
