Created a thumbnail grid for 12 products
Added style to the thumbnails according to design

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">    
+
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/3f13ab78cf.js" crossorigin="anonymous"></script> 
     <script src="js/main.js" defer></script>
     <script src="js/api.js" defer></script>
 </head>
@@ -70,7 +72,7 @@
                     <img src="assets/12-toy-car.jpg" alt="Toy Car">
                     <div class="product-header">
                         <h3>Product Name</h3>
-                        <p class="product-card_rating">4.5 star</p>
+                        <p class="product-card_rating">4.5 <i class="fa-solid fa-star" style="color: #735149;"></i></p>
                     </div>
                     <p class="product-card_price">$00.00</p>
                 </div>
