Styled product page and fetched API
Styled product page according to the Figma design. Share icon has a function to copy the link so that it's shareable. tested and it works. All that's left is to create a function to fetch the data for customer reviews.

--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page</title>
+    <script src="https://kit.fontawesome.com/3f13ab78cf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/api.js" defer></script>
 </head>
@@ -23,20 +24,12 @@
 <body>
     <main>
         <section class="product-details">
-            <img src="assets/12-toy-car.jpg" alt="Product Image">
-            <div class="product-info">
-                <h2>Product Name</h2>
-                <div>
-                    <button>Share</button>
-                </div>
-                <p class="description">Product description goes here.</p>
-                <p class="price">$99.99</p>
 
                 <button class="add-to-cart">Add to Cart</button>
             </div>
         </section>
-        <section>
-            <h3>Customer Reviews</h3>
+        <section class="customer-reviews">
+            <h2>Customer Reviews</h2>
             <div class="review">
                 <p><strong>Name</strong> ⭐⭐⭐⭐</p>
                 <p>Customer review goes here</p>
