Updated styling for product page
Responsive style for both desktop and mobile. Added function for the customer review

--- a/product.html
+++ b/product.html
@@ -6,7 +6,9 @@
     <title>Product Page</title>
     <script src="https://kit.fontawesome.com/3f13ab78cf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/productpage.css">
     <script src="js/api.js" defer></script>
+    <script type="module" src="js/customer-reviews.js" defer></script>    
 </head>
 <header>
     <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
@@ -30,15 +32,10 @@
         </section>
         <section class="customer-reviews">
             <h2>Customer Reviews</h2>
-            <div class="review">
+            <div id="customer-review">
                 <p><strong>Name</strong> ⭐⭐⭐⭐</p>
                 <p>Customer review goes here</p>
             </div>
-            <div class="review">
-                <p><strong>Name</strong> ⭐⭐⭐</p>
-                <p>Customer review goes here</p>
-            </div>
-
         </section>
     </main>
     <footer>
