--- a/account/login.html
+++ b/account/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 <header>
     <img src="../assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo">
@@ -20,20 +21,22 @@
     </div>
 </header>
 <body>
-    <div class="container">
+    <div class="login-container">
         <h1>Login</h1>
         <form id="loginForm">
-            <div class="form-group">
+            <div class="login-form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
             </div>
-            <div class="form-group">
+            <div class="login-form-group">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
+                <p>Remember me</p>
             </div>
-            <button type="submit">Login</button>
+            <button type="submit" class="login-btn cta">Login</button>
         </form>
-        <p>Don't have an account? <a href="register.html">REGISTER</a></p>
+        <p class="forgot-password-link"><a href="#">Forgot password?</a></p>
+        <p class="register-link">Don't have an account? <a href="register.html" style="font-weight: 600; text-transform: uppercase;">REGISTER</a></p>
     </div>
 </body>
 <footer>
