Added Styling to accounts and cart pages
Added styles to login, register, and cart page. Made style page for login and register page.

--- a/product.html
+++ b/product.html
@@ -27,7 +27,7 @@
     <main>
         <section class="product-details">
 
-                <button class="add-to-cart">Add to Cart</button>
+                <button class="add-to-cart cta">Add to Cart</button>
             </div>
         </section>
         <section class="customer-reviews">
