--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cart.css">
 </head>
 <header>
     <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
@@ -20,25 +21,34 @@
     </div>
 </header>
 <body>
-    <div id="cart-items">
-        <ul>
-            <li>ITEM</li>
-            <li>PRICE</li>
-            <li>QUANTITY</li>
-        </ul>
+    <div class="cart-container">
+        <div id="cart-items-header" class="cart-items-header">
+            <ul>
+                <li>ITEM</li>
+                <li>PRICE</li>
+                <li>QUANTITY</li>
+                <li>TOTAL</li>
+            </ul>
+        </div>
+        <div class="cart-item">
+            <img src="assets/1-perfume-white.jpg" alt="product information goes here">
+            <p>Product Name</p>
+            <p>$12.22</p>
+            <div class="quantity-selector">
+                <button class="quantity-btn minus" aria-label="Decrease quantity">−</button>
+                <input type="number" class="quantity-input" value="1" min="1">
+                <button class="quantity-btn plus" aria-label="Increase quantity">+</button>
+            </div>
+            <div class="item-total">Total: $<span class="item-total-amount">0.00</span></div>
+            <button class="remove-item-btn">x</button>
+        </div>
+        <div class="cart-summary">
+            <div class="subtotal-container">
+                <p>SUBTOTAL:</p> $<span id="total-amount">0.00</span>
+            </div>
+            <button class="checkout-btn cta" onclick="location.href='checkout.html'">CHECKOUT</button>
+        </div>
     </div>
-    <div>
-        <img src="assets/1-perfume-white.jpg" alt="product information goes here">
-        <p>Product Name</p>
-        <p>$12.22</p>
-        <input type="number" value="1" min="1">
-        <div class="item-total">Total: $<span class="item-total-amount">0.00</span></div>
-        <button class="remove-item-btn">x</button>
-    </div>
-    <div class="subtotal">
-        SUBTOTAL: $<span id="total-amount">0.00</span>
-    </div>
-    <button class="checkout-btn" onclick="location.href='checkout.html'">CHECKOUT</button>
 </body>
 <footer>
     <a href="index.html"><img src="assets/footer-logo-desktop.png" alt="Footer Logo"></a>
