--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/3f13ab78cf.js" crossorigin="anonymous"></script> 
     <script src="js/main.js" defer></script>
@@ -34,21 +33,21 @@
                 <img src="assets/carousel-image-1.jpg" alt="Carousel Image 1">
                 <div class="carousel-content">
                     <p class="carousel-image_text-1">Elevate Your Hair Game</p>
-                    <a href="product.html"><button class="shop-now">Shop Now</button></a>
+                    <a href="product.html"><button class="shop-now cta">Shop Now</button></a>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="assets/carousel-image-2.jpg" alt="Carousel Image 2">
                 <div class="carousel-content">
                     <p class="carousel-image_text-2">New Arrivals</p>
-                    <a href="product.html"><button class="shop-now">Shop Now</button></a>
+                    <a href="product.html"><button class="shop-now cta">Shop Now</button></a>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="assets/carousel-image-3.jpg" alt="Carousel Image 3">
                 <div class="carousel-content">
                     <p class="carousel-image_text-3">Latest In Tech</p>
-                    <a href="product.html"><button class="shop-now">Shop Now</button></a>
+                    <a href="product.html"><button class="shop-now cta">Shop Now</button></a>
                 </div>
             </div>
         </div>
