--- a/success.html
+++ b/success.html
@@ -8,10 +8,33 @@
     <link rel="stylesheet" href="css/success.css">
 </head>
 <body>
+<header>
+    <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
+    <nav>
+        <ul>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+    </nav>
+    <div class="header-icons">
+        <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
+        <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
+    </div>
+</header>
+<main>
     <div class="success-container">
         <img src="assets/success-logo-icon.png" alt="Success Icon">
         <h1>Order Complete</h1>
         <p>Thank you for shopping at HotView Labs</p>
     </div>
+    <footer>
+        <a href="index.html"><img src="assets/footer-logo-desktop.png" alt="Footer Logo"></a>
+        <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact</a></li>            
+            <li><a href="#">Privacy Policy</a></li>
+        </ul>
+    </footer>
+</main>
 </body>
 </html>
