--- a/checkout.html
+++ b/checkout.html
@@ -65,19 +65,19 @@
             <section class="payment-form">
                 <h1>Payment Information</h1>
                 <div class="payment-form-group">
-                    <label for="name-on-card">Name on Card:</label>
+                    <label for="name-on-card">Name on Card</label>
                     <input type="text" id="name-on-card" name="nameOnCard" placeholder="James Smith" required>
                 </div>
                     <div class="payment-form-group">
-                        <label for="card-number">Card Number:</label>
+                        <label for="card-number">Card Number</label>
                         <input type="text" id="card-number" name="cardNumber" placeholder="1234 5678 9101 1121" required>
                     </div>
                     <div class="payment-form-group">
-                        <label for="expiry">Expiry Date:</label>
+                        <label for="expiry">Expiration date</label>
                         <input type="text" id="expiry" name="expiry" placeholder="MM/YY" required>
                     </div>
                     <div class="payment-form-group">
-                        <label for="cvv">CVV:</label>
+                        <label for="cvv">CVV</label>
                         <input type="text" id="cvv" name="cvv" placeholder="123" required>
                     </div>
                 <a href="success.html"><button type="submit" class="place-order-btn cta">Pay Now</button></a>
