--- a/product.html
+++ b/product.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/productpage.css">
     <script src="js/api.js" defer></script>
-    <script type="module" src="js/customer-reviews.js" defer></script>    
+    <script src="js/auth.js" defer></script>
+    <script type="module" src="js/customer-reviews.js" defer></script> 
 </head>
 <header>
     <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
@@ -27,7 +28,7 @@
     <main>
         <section class="product-details">
 
-                <button class="add-to-cart cta">Add to Cart</button>
+                <button id="add-to-cart-btn" class="add-to-cart-btn cta">Add to Cart</button>
             </div>
         </section>
         <section class="customer-reviews">
