--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <script src="https://kit.fontawesome.com/3f13ab78cf.js" crossorigin="anonymous"></script> 
     <script src="js/main.js" defer></script>
     <script src="js/api.js" defer></script>
@@ -24,6 +25,23 @@
     <div class="header-icons">
         <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
         <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
+    </div>
+    <button class="hamburger" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <ul>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+        <div class="mobile-icons">
+            <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
+            <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
+        </div>
     </div>
 </header>
 <main>
