--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,8 @@
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="css/media.css">
+    <script src="js/main.js" defer></script>
 </head>
 <header>
     <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
@@ -19,8 +21,27 @@
         <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
         <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
     </div>
+    <button class="hamburger" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <ul>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+        <div class="mobile-icons">
+            <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
+            <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
+        </div>
+    </div>
 </header>
 <body>
+</body>
+<main>
     <div class="cart-container">
         <div class="cart-item-header">
             <ul>
@@ -51,7 +72,7 @@
             <button class="checkout-btn cta" onclick="location.href='checkout.html'">CHECKOUT</button>
         </div>
     </div>
-</body>
+</main>
 <footer>
     <a href="index.html"><img src="assets/footer-logo-desktop.png" alt="Footer Logo"></a>
     <ul>
@@ -60,4 +81,5 @@
         <li><a href="#">Privacy Policy</a></li>
     </ul>
 </footer>
+</body>
 </html>
