--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,8 @@
     <title>Checkout</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/checkout.css">
+    <link rel="stylesheet" href="css/media.css">
+    <script src="js/main.js" defer></script>
 </head>
 <header>
     <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
@@ -19,9 +21,27 @@
         <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
         <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
     </div>
+    <button class="hamburger" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <ul>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+        <div class="mobile-icons">
+            <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
+            <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
+        </div>
+    </div>
 </header>
 <body>
     <main>
+        <div class="checkout-page">
         <div class="checkout-form-sections">
             <section class="shipping-info">
                 <h1>Shipping Information</h1>
@@ -94,6 +114,7 @@
                 <strong>Subtotal:</strong> $<span id="subtotal-amount">0.00</span>
             </div>
         </section>
+        </div>
     </main>
     <footer>
         <a href="index.html"><img src="assets/footer-logo-desktop.png" alt="Footer Logo"></a>
