--- a/success.html
+++ b/success.html
@@ -6,6 +6,7 @@
     <title>Success</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/success.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
 <header>
@@ -19,6 +20,23 @@
     <div class="header-icons">
         <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
         <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
+    </div>
+    <button class="hamburger" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <ul>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+        <div class="mobile-icons">
+            <a href="account/login.html"><img src="assets/user.png" alt="User profile icon for accessing account login and registration"></a>
+            <a href="cart.html"><img src="assets/shopping-bag.png" alt="Shopping Bag Icon that directs to cart"></a>
+        </div>
     </div>
 </header>
 <main>
@@ -36,5 +54,7 @@
             <li><a href="#">Privacy Policy</a></li>
         </ul>
 </footer>
+
+<script src="js/main.js"></script>
 </body>
 </html>
