Cleaned up media.css
Made the code cleaner

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-    <script src="https://kit.fontawesome.com/3f13ab78cf.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/3f13ab78cf.js" crossorigin="anonymous"></script>
     <script src="js/main.js" defer></script>
     <script src="js/api.js" defer></script>
 </head>
@@ -48,21 +48,21 @@
     <section aria-label="carousel of the latest products" class="carousel">
         <div class="carousel-container">
             <div class="carousel-slide">
-                <img src="assets/carousel-image-1.jpg" alt="Carousel Image 1">
+                <img src="" alt="Carousel Image 1">
                 <div class="carousel-content">
                     <p class="carousel-image_text-1">Elevate Your Hair Game</p>
                     <a href="product.html"><button class="shop-now cta">Shop Now</button></a>
                 </div>
             </div>
             <div class="carousel-slide">
-                <img src="assets/carousel-image-2.jpg" alt="Carousel Image 2">
+                <img src="" alt="Carousel Image 2">
                 <div class="carousel-content">
                     <p class="carousel-image_text-2">New Arrivals</p>
                     <a href="product.html"><button class="shop-now cta">Shop Now</button></a>
                 </div>
             </div>
             <div class="carousel-slide">
-                <img src="assets/carousel-image-3.jpg" alt="Carousel Image 3">
+                <img src="" alt="Carousel Image 3">
                 <div class="carousel-content">
                     <p class="carousel-image_text-3">Latest In Tech</p>
                     <a href="product.html"><button class="shop-now cta">Shop Now</button></a>
