Updated responsiveness to cart and checkout
Renamed some classes and made both cart and checkout pages responsive

--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="css/media.css">
     <script src="js/main.js" defer></script>
+    <script src="js/cart.js" defer></script>
 </head>
 <header>
     <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
