--- a/checkout.html
+++ b/checkout.html
@@ -103,7 +103,7 @@
                 <a href="success.html"><button type="submit" class="place-order-btn cta">Pay Now</button></a>
             </section>
         </div>
-        <section class="cart-summary">
+        <section class="checkout-cart-section">
             <h2>Cart Summary</h2>
             <div id="cart-items" class="cart-items">
                 <img src="assets/10-hairdryer.jpg" alt="Hair Dryer">
