Updated product page and made it responsive
Updated product page to match the Figma design and made it responsive. Tested on all browsers.

--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
     <title>Product Page</title>
     <script src="https://kit.fontawesome.com/3f13ab78cf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/productpage.css">
+    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/media.css">
     <script src="js/main.js" defer></script>
     <script src="js/api.js" defer></script>
@@ -46,11 +46,12 @@
 <body>
     <main>
         <section class="product-details">
-
-                <button id="add-to-cart-btn" class="add-to-cart-btn cta">Add to Cart</button>
+                <div class="add-to-cart-btn-container">
+                    <button id="add-to-cart-btn" class="add-to-cart-btn cta">Add to Cart</button>
+                </div>
             </div>
         </section>
-        <section class="customer-reviews">
+        <section class="customer-reviews-container">
             <h2>Customer Reviews</h2>
             <div id="customer-review">
                 <p><strong>Name</strong> ⭐⭐⭐⭐</p>
