Renamed classes and id to customer review
Renamed classes and id to customer review section in the product page to better fetch data from api.

--- a/product.html
+++ b/product.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </section>
-        <section class="customer-reviews-container">
+        <section id="customer-review-container" class="customer-review-container">
             <h2>Customer Reviews</h2>
             <div id="customer-review">
                 <p><strong>Name</strong> ⭐⭐⭐⭐</p>
