Created variables page and updated styling
Update styling to customer review section and added variables to consist with DRY.

--- a/success.html
+++ b/success.html
@@ -43,7 +43,7 @@
     <div class="success-container">
         <img src="assets/success-logo-icon.png" alt="Success Icon">
         <h1>Order Complete</h1>
-        <p>Thank you for shopping at HotView Labs</p>
+        <h2>Thank you for shopping at HotView Labs</h2>
     </div>
 </main>
 <footer>
