--- a/account/login.html
+++ b/account/login.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/account.css">
     <link rel="stylesheet" href="../css/media.css">
+    <script src="../js/main.js" defer></script>
     <script src="../js/auth.js" defer></script>
+
 </head>
+<body>
 <header>
     <a href="../index.html"><img src="../assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
     <nav>
@@ -40,7 +43,7 @@
         </div>
     </div>
 </header>
-<body>
+    <main>
     <div class="login-container">
         <h1>Login</h1>
         <form id="loginForm">
@@ -61,7 +64,6 @@
         <p class="forgot-password-link"><a href="#">Forgot password?</a></p>
         <p class="register-link">Need an account? <a href="register.html" style="font-weight: 600; text-transform: uppercase;">REGISTER</a></p>
     </div>
-</body>
 <footer>
     <a href="../index.html"><img src="../assets/footer-logo-desktop.png" alt="Footer Logo"></a>
     <ul>
@@ -70,6 +72,6 @@
         <li><a href="#">Privacy Policy</a></li>
     </ul>
 </footer>
-
-<script src="../js/main.js"></script>
+</main>
+</body>
 </html>
