--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="css/media.css">
     <script src="js/main.js" defer></script>
+    <script src="js/api.js" defer></script>
     <script src="js/cart.js" defer></script>
 </head>
 <header>
@@ -52,6 +53,7 @@
                 <li>TOTAL</li>
             </ul>
         </div>
+        <div class="cart-item-card">
         <div id="cart-item" class="cart-item">
             <div id="item-details" class="item-details">
                 <img src="assets/1-perfume-white.jpg" alt="product information goes here">
@@ -65,6 +67,7 @@
             </div>
             <div class="item-total">$<span class="item-total-amount">0.00</span></div>
             <button class="remove-item-btn">x</button>
+        </div>
         </div>
         <div class="cart-summary">
             <div class="subtotal-container">
