--- a/product.html
+++ b/product.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="css/media.css">
     <script src="js/main.js" defer></script>
     <script src="js/api.js" defer></script>
-    <script src="js/auth.js" defer></script>
-    <script type="module" src="js/customer-reviews.js" defer></script> 
+    <script src="js/product-page.js" defer></script>
 </head>
 <header>
     <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
@@ -45,18 +44,21 @@
 </header>
 <body>
     <main>
-        <section class="product-details">
+        <section class="product-detail-container">
+        <div class="product-detail-section">
                 <div class="add-to-cart-btn-container">
                     <button id="add-to-cart-btn" class="add-to-cart-btn cta">Add to Cart</button>
                 </div>
             </div>
-        </section>
+        </div>
         <section id="customer-review-container" class="customer-review-container">
             <h2>Customer Reviews</h2>
             <div id="customer-review">
-                <p><strong>Name</strong> ⭐⭐⭐⭐</p>
-                <p>Customer review goes here</p>
+                <p class="review-user"><strong>Name</strong>
+                    <span class="stars"></span></p>
+                <p class="review-description">Customer review goes here</p>
             </div>
+        </section>
         </section>
     </main>
     <footer>
