Form validation for checkout
Added validation for shipping and payment and fixed styling to prompt the user which fields are missing. Minor changes to share button.

--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/checkout.css">
     <link rel="stylesheet" href="css/media.css">
     <script src="js/main.js" defer></script>
+    <script src="js/auth.js" defer></script>
+    <script src="js/checkout.js" defer></script>
 </head>
 <header>
     <a href="index.html"><img src="assets/header-logo-desktop.png" alt="HotViewLabs Logo" class="header-logo"></a>
@@ -100,7 +102,7 @@
                         <label for="cvv">CVV</label>
                         <input type="text" id="cvv" name="cvv" placeholder="123" required>
                     </div>
-                <a href="success.html"><button type="submit" class="place-order-btn cta">Pay Now</button></a>
+                <button type="button" class="place-order-btn cta">Pay Now</button>
             </section>
         </div>
         <section class="checkout-cart-section">
