Redid shipping and payment forms function in checkout.js
Changed logic to the shipping and payment forms. Added validation patterns and format the card information. Cart summary shows the final products the user is purchasing. Changed class name to not clash with another file.

--- a/checkout.html
+++ b/checkout.html
@@ -107,10 +107,8 @@
         </div>
         <section class="checkout-cart-section">
             <h2>Cart Summary</h2>
-            <div id="cart-items" class="cart-items">
-                <img src="assets/10-hairdryer.jpg" alt="Hair Dryer">
-                <p class="product-name">Product Name Goes Here</p>
-                <p class="product-price">599,-</p>
+            <div id="checkout-cart-item" class="checkout-cart-item">
+            <!-- Cart items will be dynamically inserted here -->
             </div>
             <div class="subtotal-container">
                 <strong>Subtotal:</strong> $<span id="subtotal-amount">0.00</span>
