--- a/account/register.html
+++ b/account/register.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/account.css">
     <link rel="stylesheet" href="../css/media.css">
+    <script src="../js/main.js" defer></script>
+    <script src="../js/auth.js" defer></script>
 </head>
 <body>
 <header>
@@ -44,20 +46,24 @@
         <h1>Register</h1>
         <form id="registerForm">
             <div class="register-form-group">
-                <label for="Name">Name</label>
+                <label for="name">Name</label>
                 <input type="text" id="name" name="name" required>
+                <div class="error-message"></div>
             </div>
             <div class="register-form-group">
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
+                <div class="error-message"></div>
             </div>
             <div class="register-form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
+                <div class="error-message"></div>
             </div>
             <div class="register-form-group">
                 <label for="confirmPassword">Confirm Password</label>
                 <input type="password" id="confirmPassword" name="confirmPassword" required>
+                <div class="error-message"></div>
             </div>
             <button type="submit" class="register-btn cta">Submit</button>
         </form>
@@ -74,6 +80,4 @@
         <li><a href="#">Privacy Policy</a></li>
     </ul>
 </footer>
-
-<script src="../js/main.js"></script>
 </html>
