Redid auth.js and created mock users
Redid the logic for authentication to use mock users to log in and redirects users that aren't in the mock.js to registration. Created a success message when registration is a success.

--- a/account/login.html
+++ b/account/login.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="../css/account.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../js/main.js" defer></script>
-    <script src="../js/auth.js" defer></script>
-
+    <script src="../js/auth.js" type="module" defer></script>
 </head>
 <body>
 <header>
@@ -64,6 +63,8 @@
         <p class="forgot-password-link"><a href="#">Forgot password?</a></p>
         <p class="register-link">Need an account? <a href="register.html" style="font-weight: 600; text-transform: uppercase;">REGISTER</a></p>
     </div>
+</main>
+</body>
 <footer>
     <a href="../index.html"><img src="../assets/footer-logo-desktop.png" alt="Footer Logo"></a>
     <ul>
@@ -72,6 +73,4 @@
         <li><a href="#">Privacy Policy</a></li>
     </ul>
 </footer>
-</main>
-</body>
 </html>
