--- a/account/register.html
+++ b/account/register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/account.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../js/main.js" defer></script>
-    <script src="../js/auth.js" defer></script>
+    <script src="../js/auth.js" type="module" defer></script>
 </head>
 <body>
 <header>
@@ -69,6 +69,10 @@
         </form>
 
         <p class="register-link">Already a member? <a href="login.html" style="font-weight: 600;">LOGIN</a></p>
+        </div>
+        <div class="success-message">
+            <img src="../assets/success-logo-icon.png" alt="success logo icon">
+            <p>Registration completed!</p><p>Redirecting to login...</p>
         </div>
     </main>
 </body>
