Moved carousel function to carousel.js
Moved all of the carousel function into it's on file and refactored the product-page.js  & api.js. Adjusted styling in carousel to fit the picture and follow the figma design

--- a/product.html
+++ b/product.html
@@ -45,20 +45,13 @@
 <body>
     <main>
         <section class="product-detail-container">
-        <div class="product-detail-section">
-                <div class="add-to-cart-btn-container">
-                    <button id="add-to-cart-btn" class="add-to-cart-btn cta">Add to Cart</button>
-                </div>
-            </div>
-        </div>
-        <section id="customer-review-container" class="customer-review-container">
-            <h2>Customer Reviews</h2>
-            <div id="customer-review">
-                <p class="review-user"><strong>Name</strong>
-                    <span class="stars"></span></p>
-                <p class="review-description">Customer review goes here</p>
+            <div class="product-detail-section">
+                
+                <p>Loading product...</p>
             </div>
         </section>
+        <section id="customer-review-container" class="customer-review-container">
+            <p>Loading reviews...</p>
         </section>
     </main>
     <footer>
