Updated carousel style
Updated the navigation buttons to match with the Figma design

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </div>
         
         <!-- Navigation buttons -->
-        <button class="carousel-nav__prev" aria-label="Previous slide"></button>
-        <button class="carousel-nav__next" aria-label="Next slide"></button>
+        <button class="carousel-nav__prev fa-solid fa-arrow-left" aria-label="Previous slide"></button>
+        <button class="carousel-nav__next fa-solid fa-arrow-right" aria-label="Next slide"></button>
         
         <!-- Indicators -->
         <div class="carousel-indicators">
