--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="carousel-slide">
                 <img src="assets/carousel-image-1.jpg" alt="Carousel Image 1" class="carousel-image-1">
                 <div class="carousel-content-slide-1">
-                    <p class="carousel-image_text-1">Beauty You'll Love</p>
+                    <p class="carousel-image_text-1">Elevate Your Hair Game</p>
                     <button class="shop-now cta">Shop Now</button>
                 </div>
             </div>
