Update style to shop now button
Updated shop now button so it's responsive and changed class name.

--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
                 <img src="assets/carousel-image-1.jpg" alt="Carousel Image 1" class="carousel-image-1">
                 <div class="carousel-content-slide-1">
                     <p class="carousel-image_text-1">Elevate Your Hair Game</p>
-                    <button class="shop-now cta">Shop Now</button>
+                    <button class="shop-now-btn cta">Shop Now</button>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="assets/carousel-image-2.jpg" alt="Carousel Image 2">
                 <div class="carousel-content-slide-2">
                     <p class="carousel-image_text-2">New<br>Arrivals</p>
-                    <button class="carousel-content-slide-2-button shop-now cta">Shop Now</button>
+                    <button class="carousel-content-slide-2-button shop-now-btn cta">Shop Now</button>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="assets/carousel-image-3.jpg" alt="Carousel Image 3">
                 <div class="carousel-content-slide-3">
                     <p class="carousel-image_text-3">Latest In Tech</p>
-                    <button class="shop-now cta">Shop Now</button>
+                    <button class="shop-now-btn cta">Shop Now</button>
                 </div>
             </div>
         </div>
